crates/java-syntax/tests/snapshots/parser_snapshots__parse_switch_expr.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void test() {
        var a = switch (expr) {
            case 1 -> {}
            case 2 -> {}
        };
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "test"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
IDENTIFIER "var"
WHITESPACE " "
IDENTIFIER "a"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
SWITCH_KW "switch"
WHITESPACE " "
L_PAREN "("
IDENTIFIER "expr"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n            "
CASE_KW "case"
WHITESPACE " "
INTEGER_LITERAL "1"
WHITESPACE " "
ARROW "->"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n            "
CASE_KW "case"
WHITESPACE " "
INTEGER_LITERAL "2"
WHITESPACE " "
ARROW "->"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n        "
R_BRACE "}"
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..132
  CLASS_DECL@0..131
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..131
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..129
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "test"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        BLOCK@29..129
          L_BRACE@29..30 "{"
          WHITESPACE@30..39 "\n        "
          LOCAL_VARIABLE_DECLARATION_STMT@39..123
            LOCAL_VARIABLE_DECLARATION@39..122
              IDENTIFIER@39..42 "var"
              WHITESPACE@42..43 " "
              VARIABLE_DECLARATOR_LIST@43..122
                VARIABLE_DECLARATOR@43..122
                  IDENTIFIER@43..44 "a"
                  WHITESPACE@44..45 " "
                  EQUAL@45..46 "="
                  WHITESPACE@46..47 " "
                  SWITCH_EXPR@47..122
                    SWITCH_KW@47..53 "switch"
                    WHITESPACE@53..54 " "
                    L_PAREN@54..55 "("
                    LITERAL@55..59
                      IDENTIFIER@55..59 "expr"
                    R_PAREN@59..60 ")"
                    WHITESPACE@60..61 " "
                    SWITCH_BLOCK@61..122
                      L_BRACE@61..62 "{"
                      WHITESPACE@62..75 "\n            "
                      SWITCH_RULE@75..87
                        SWITCH_LABEL@75..81
                          CASE_KW@75..79 "case"
                          WHITESPACE@79..80 " "
                          LITERAL@80..81
                            INTEGER_LITERAL@80..81 "1"
                        WHITESPACE@81..82 " "
                        ARROW@82..84 "->"
                        WHITESPACE@84..85 " "
                        BLOCK@85..87
                          L_BRACE@85..86 "{"
                          R_BRACE@86..87 "}"
                      WHITESPACE@87..100 "\n            "
                      SWITCH_RULE@100..112
                        SWITCH_LABEL@100..106
                          CASE_KW@100..104 "case"
                          WHITESPACE@104..105 " "
                          LITERAL@105..106
                            INTEGER_LITERAL@105..106 "2"
                        WHITESPACE@106..107 " "
                        ARROW@107..109 "->"
                        WHITESPACE@109..110 " "
                        BLOCK@110..112
                          L_BRACE@110..111 "{"
                          R_BRACE@111..112 "}"
                      WHITESPACE@112..121 "\n        "
                      R_BRACE@121..122 "}"
            SEMICOLON@122..123 ";"
          WHITESPACE@123..128 "\n    "
          R_BRACE@128..129 "}"
      WHITESPACE@129..130 "\n"
      R_BRACE@130..131 "}"
  WHITESPACE@131..132 "\n"
