crates/java-syntax/tests/snapshots/parser_snapshots__parse_switch_stmt.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void func() {
        switch (expr) {
            case 1, 2, 3, 4:
            case 5, 6, 7, 8:
                break;
            case String _:
            case String s:
                break;
            case Point(int x, int _):
                break;
            default:
                break;
        }
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
SWITCH_KW "switch"
WHITESPACE " "
L_PAREN "("
IDENTIFIER "expr"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n            "
CASE_KW "case"
WHITESPACE " "
INTEGER_LITERAL "1"
COMMA ","
WHITESPACE " "
INTEGER_LITERAL "2"
COMMA ","
WHITESPACE " "
INTEGER_LITERAL "3"
COMMA ","
WHITESPACE " "
INTEGER_LITERAL "4"
COLON ":"
WHITESPACE "\n            "
CASE_KW "case"
WHITESPACE " "
INTEGER_LITERAL "5"
COMMA ","
WHITESPACE " "
INTEGER_LITERAL "6"
COMMA ","
WHITESPACE " "
INTEGER_LITERAL "7"
COMMA ","
WHITESPACE " "
INTEGER_LITERAL "8"
COLON ":"
WHITESPACE "\n                "
BREAK_KW "break"
SEMICOLON ";"
WHITESPACE "\n            "
CASE_KW "case"
WHITESPACE " "
IDENTIFIER "String"
WHITESPACE " "
UNDERSCORE "_"
COLON ":"
WHITESPACE "\n            "
CASE_KW "case"
WHITESPACE " "
IDENTIFIER "String"
WHITESPACE " "
IDENTIFIER "s"
COLON ":"
WHITESPACE "\n                "
BREAK_KW "break"
SEMICOLON ";"
WHITESPACE "\n            "
CASE_KW "case"
WHITESPACE " "
IDENTIFIER "Point"
L_PAREN "("
INT_KW "int"
WHITESPACE " "
IDENTIFIER "x"
COMMA ","
WHITESPACE " "
INT_KW "int"
WHITESPACE " "
UNDERSCORE "_"
R_PAREN ")"
COLON ":"
WHITESPACE "\n                "
BREAK_KW "break"
SEMICOLON ";"
WHITESPACE "\n            "
DEFAULT_KW "default"
COLON ":"
WHITESPACE "\n                "
BREAK_KW "break"
SEMICOLON ";"
WHITESPACE "\n        "
R_BRACE "}"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..336
  CLASS_DECL@0..335
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..335
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..333
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "func"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        BLOCK@29..333
          L_BRACE@29..30 "{"
          WHITESPACE@30..39 "\n        "
          SWITCH_STMT@39..327
            SWITCH_KW@39..45 "switch"
            WHITESPACE@45..46 " "
            L_PAREN@46..47 "("
            LITERAL@47..51
              IDENTIFIER@47..51 "expr"
            R_PAREN@51..52 ")"
            WHITESPACE@52..53 " "
            SWITCH_BLOCK@53..327
              L_BRACE@53..54 "{"
              WHITESPACE@54..67 "\n            "
              SWITCH_BLOCK_STATEMENT_GROUP@67..135
                SWITCH_LABEL@67..82
                  CASE_KW@67..71 "case"
                  WHITESPACE@71..72 " "
                  LITERAL@72..73
                    INTEGER_LITERAL@72..73 "1"
                  COMMA@73..74 ","
                  WHITESPACE@74..75 " "
                  LITERAL@75..76
                    INTEGER_LITERAL@75..76 "2"
                  COMMA@76..77 ","
                  WHITESPACE@77..78 " "
                  LITERAL@78..79
                    INTEGER_LITERAL@78..79 "3"
                  COMMA@79..80 ","
                  WHITESPACE@80..81 " "
                  LITERAL@81..82
                    INTEGER_LITERAL@81..82 "4"
                COLON@82..83 ":"
                WHITESPACE@83..96 "\n            "
                SWITCH_LABEL@96..111
                  CASE_KW@96..100 "case"
                  WHITESPACE@100..101 " "
                  LITERAL@101..102
                    INTEGER_LITERAL@101..102 "5"
                  COMMA@102..103 ","
                  WHITESPACE@103..104 " "
                  LITERAL@104..105
                    INTEGER_LITERAL@104..105 "6"
                  COMMA@105..106 ","
                  WHITESPACE@106..107 " "
                  LITERAL@107..108
                    INTEGER_LITERAL@107..108 "7"
                  COMMA@108..109 ","
                  WHITESPACE@109..110 " "
                  LITERAL@110..111
                    INTEGER_LITERAL@110..111 "8"
                COLON@111..112 ":"
                WHITESPACE@112..129 "\n                "
                BREAK_STMT@129..135
                  BREAK_KW@129..134 "break"
                  SEMICOLON@134..135 ";"
              WHITESPACE@135..148 "\n            "
              SWITCH_BLOCK_STATEMENT_GROUP@148..212
                SWITCH_LABEL@148..161
                  CASE_KW@148..152 "case"
                  WHITESPACE@152..153 " "
                  TYPE_PATTERN@153..161
                    TYPE@153..159
                      QUALIFIED_NAME@153..159
                        IDENTIFIER@153..159 "String"
                    WHITESPACE@159..160 " "
                    UNDERSCORE@160..161 "_"
                COLON@161..162 ":"
                WHITESPACE@162..175 "\n            "
                SWITCH_LABEL@175..188
                  CASE_KW@175..179 "case"
                  WHITESPACE@179..180 " "
                  TYPE_PATTERN@180..188
                    TYPE@180..186
                      QUALIFIED_NAME@180..186
                        IDENTIFIER@180..186 "String"
                    WHITESPACE@186..187 " "
                    IDENTIFIER@187..188 "s"
                COLON@188..189 ":"
                WHITESPACE@189..206 "\n                "
                BREAK_STMT@206..212
                  BREAK_KW@206..211 "break"
                  SEMICOLON@211..212 ";"
              WHITESPACE@212..225 "\n            "
              SWITCH_BLOCK_STATEMENT_GROUP@225..273
                SWITCH_LABEL@225..249
                  CASE_KW@225..229 "case"
                  WHITESPACE@229..230 " "
                  RECORD_PATTERN@230..249
                    TYPE@230..235
                      QUALIFIED_NAME@230..235
                        IDENTIFIER@230..235 "Point"
                    L_PAREN@235..236 "("
                    TYPE_PATTERN@236..241
                      TYPE@236..239
                        INT_KW@236..239 "int"
                      WHITESPACE@239..240 " "
                      IDENTIFIER@240..241 "x"
                    COMMA@241..242 ","
                    WHITESPACE@242..243 " "
                    TYPE_PATTERN@243..248
                      TYPE@243..246
                        INT_KW@243..246 "int"
                      WHITESPACE@246..247 " "
                      UNDERSCORE@247..248 "_"
                    R_PAREN@248..249 ")"
                COLON@249..250 ":"
                WHITESPACE@250..267 "\n                "
                BREAK_STMT@267..273
                  BREAK_KW@267..272 "break"
                  SEMICOLON@272..273 ";"
              WHITESPACE@273..286 "\n            "
              SWITCH_BLOCK_STATEMENT_GROUP@286..317
                SWITCH_LABEL@286..293
                  DEFAULT_KW@286..293 "default"
                COLON@293..294 ":"
                WHITESPACE@294..311 "\n                "
                BREAK_STMT@311..317
                  BREAK_KW@311..316 "break"
                  SEMICOLON@316..317 ";"
              WHITESPACE@317..326 "\n        "
              R_BRACE@326..327 "}"
          WHITESPACE@327..332 "\n    "
          R_BRACE@332..333 "}"
      WHITESPACE@333..334 "\n"
      R_BRACE@334..335 "}"
  WHITESPACE@335..336 "\n"
