crates/java-syntax/tests/snapshots/parser_snapshots__parse_synchronized_stmt.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    public static void main(String[] args) {
        Test t = new Test();
        synchronized(t) {
            synchronized(t) {
                System.out.println("made it!");
            }
        }
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
PUBLIC_KW "public"
WHITESPACE " "
STATIC_KW "static"
WHITESPACE " "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "main"
L_PAREN "("
IDENTIFIER "String"
L_BRACKET "["
R_BRACKET "]"
WHITESPACE " "
IDENTIFIER "args"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
IDENTIFIER "Test"
WHITESPACE " "
IDENTIFIER "t"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
NEW_KW "new"
WHITESPACE " "
IDENTIFIER "Test"
L_PAREN "("
R_PAREN ")"
SEMICOLON ";"
WHITESPACE "\n        "
SYNCHRONIZED_KW "synchronized"
L_PAREN "("
IDENTIFIER "t"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n            "
SYNCHRONIZED_KW "synchronized"
L_PAREN "("
IDENTIFIER "t"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n                "
IDENTIFIER "System"
DOT "."
IDENTIFIER "out"
DOT "."
IDENTIFIER "println"
L_PAREN "("
STRING_LITERAL "\"made it!\""
R_PAREN ")"
SEMICOLON ";"
WHITESPACE "\n            "
R_BRACE "}"
WHITESPACE "\n        "
R_BRACE "}"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..223
  CLASS_DECL@0..222
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..222
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..220
        MODIFIER_LIST@17..30
          PUBLIC_KW@17..23 "public"
          WHITESPACE@23..24 " "
          STATIC_KW@24..30 "static"
        WHITESPACE@30..31 " "
        VOID_KW@31..35 "void"
        WHITESPACE@35..36 " "
        IDENTIFIER@36..40 "main"
        FORMAL_PARAMETERS@40..55
          L_PAREN@40..41 "("
          FORMAL_PARAMETER@41..54
            TYPE@41..49
              QUALIFIED_NAME@41..47
                IDENTIFIER@41..47 "String"
              DIMENSIONS@47..49
                DIMENSION@47..49
                  L_BRACKET@47..48 "["
                  R_BRACKET@48..49 "]"
            WHITESPACE@49..50 " "
            IDENTIFIER@50..54 "args"
          R_PAREN@54..55 ")"
        WHITESPACE@55..56 " "
        BLOCK@56..220
          L_BRACE@56..57 "{"
          WHITESPACE@57..66 "\n        "
          LOCAL_VARIABLE_DECLARATION_STMT@66..86
            LOCAL_VARIABLE_DECLARATION@66..85
              TYPE@66..70
                QUALIFIED_NAME@66..70
                  IDENTIFIER@66..70 "Test"
              WHITESPACE@70..71 " "
              VARIABLE_DECLARATOR_LIST@71..85
                VARIABLE_DECLARATOR@71..85
                  IDENTIFIER@71..72 "t"
                  WHITESPACE@72..73 " "
                  EQUAL@73..74 "="
                  WHITESPACE@74..75 " "
                  NEW_EXPR@75..85
                    NEW_KW@75..78 "new"
                    WHITESPACE@78..79 " "
                    QUALIFIED_NAME@79..83
                      IDENTIFIER@79..83 "Test"
                    ARGUMENT_LIST@83..85
                      L_PAREN@83..84 "("
                      R_PAREN@84..85 ")"
            SEMICOLON@85..86 ";"
          WHITESPACE@86..95 "\n        "
          SYNCHRONIZED_STMT@95..214
            SYNCHRONIZED_KW@95..107 "synchronized"
            PARENTHESIZED_EXPR@107..110
              L_PAREN@107..108 "("
              LITERAL@108..109
                IDENTIFIER@108..109 "t"
              R_PAREN@109..110 ")"
            WHITESPACE@110..111 " "
            BLOCK@111..214
              L_BRACE@111..112 "{"
              WHITESPACE@112..125 "\n            "
              SYNCHRONIZED_STMT@125..204
                SYNCHRONIZED_KW@125..137 "synchronized"
                PARENTHESIZED_EXPR@137..140
                  L_PAREN@137..138 "("
                  LITERAL@138..139
                    IDENTIFIER@138..139 "t"
                  R_PAREN@139..140 ")"
                WHITESPACE@140..141 " "
                BLOCK@141..204
                  L_BRACE@141..142 "{"
                  WHITESPACE@142..159 "\n                "
                  EXPRESSION_STMT@159..190
                    METHOD_CALL@159..189
                      FIELD_ACCESS@159..177
                        FIELD_ACCESS@159..169
                          LITERAL@159..165
                            IDENTIFIER@159..165 "System"
                          DOT@165..166 "."
                          IDENTIFIER@166..169 "out"
                        DOT@169..170 "."
                        IDENTIFIER@170..177 "println"
                      ARGUMENT_LIST@177..189
                        L_PAREN@177..178 "("
                        LITERAL@178..188
                          STRING_LITERAL@178..188 "\"made it!\""
                        R_PAREN@188..189 ")"
                    SEMICOLON@189..190 ";"
                  WHITESPACE@190..203 "\n            "
                  R_BRACE@203..204 "}"
              WHITESPACE@204..213 "\n        "
              R_BRACE@213..214 "}"
          WHITESPACE@214..219 "\n    "
          R_BRACE@219..220 "}"
      WHITESPACE@220..221 "\n"
      R_BRACE@221..222 "}"
  WHITESPACE@222..223 "\n"
