crates/java-syntax/tests/snapshots/parser_snapshots__parse_this.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    String field;
    void test() {
        this.test(this.field);
    }

    void test(String s) {}
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
IDENTIFIER "String"
WHITESPACE " "
IDENTIFIER "field"
SEMICOLON ";"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "test"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
THIS_KW "this"
DOT "."
IDENTIFIER "test"
L_PAREN "("
THIS_KW "this"
DOT "."
IDENTIFIER "field"
R_PAREN ")"
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "test"
L_PAREN "("
IDENTIFIER "String"
WHITESPACE " "
IDENTIFIER "s"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..116
  CLASS_DECL@0..115
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..115
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      FIELD_DECL@17..30
        TYPE@17..23
          QUALIFIED_NAME@17..23
            IDENTIFIER@17..23 "String"
        WHITESPACE@23..24 " "
        VARIABLE_DECLARATOR_LIST@24..29
          VARIABLE_DECLARATOR@24..29
            IDENTIFIER@24..29 "field"
        SEMICOLON@29..30 ";"
      WHITESPACE@30..35 "\n    "
      METHOD_DECL@35..85
        VOID_KW@35..39 "void"
        WHITESPACE@39..40 " "
        IDENTIFIER@40..44 "test"
        FORMAL_PARAMETERS@44..46
          L_PAREN@44..45 "("
          R_PAREN@45..46 ")"
        WHITESPACE@46..47 " "
        BLOCK@47..85
          L_BRACE@47..48 "{"
          WHITESPACE@48..57 "\n        "
          EXPRESSION_STMT@57..79
            METHOD_CALL@57..78
              FIELD_ACCESS@57..66
                LITERAL@57..61
                  THIS_KW@57..61 "this"
                DOT@61..62 "."
                IDENTIFIER@62..66 "test"
              ARGUMENT_LIST@66..78
                L_PAREN@66..67 "("
                FIELD_ACCESS@67..77
                  LITERAL@67..71
                    THIS_KW@67..71 "this"
                  DOT@71..72 "."
                  IDENTIFIER@72..77 "field"
                R_PAREN@77..78 ")"
            SEMICOLON@78..79 ";"
          WHITESPACE@79..84 "\n    "
          R_BRACE@84..85 "}"
      WHITESPACE@85..91 "\n\n    "
      METHOD_DECL@91..113
        VOID_KW@91..95 "void"
        WHITESPACE@95..96 " "
        IDENTIFIER@96..100 "test"
        FORMAL_PARAMETERS@100..110
          L_PAREN@100..101 "("
          FORMAL_PARAMETER@101..109
            TYPE@101..107
              QUALIFIED_NAME@101..107
                IDENTIFIER@101..107 "String"
            WHITESPACE@107..108 " "
            IDENTIFIER@108..109 "s"
          R_PAREN@109..110 ")"
        WHITESPACE@110..111 " "
        BLOCK@111..113
          L_BRACE@111..112 "{"
          R_BRACE@112..113 "}"
      WHITESPACE@113..114 "\n"
      R_BRACE@114..115 "}"
  WHITESPACE@115..116 "\n"
