crates/java-syntax/tests/snapshots/parser_snapshots__parse_top_level_empty_decl.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
;

TOKENS:
SEMICOLON ";"
WHITESPACE "\n"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..2
  EMPTY_DECL@0..1
    SEMICOLON@0..1 ";"
  WHITESPACE@1..2 "\n"
