crates/java-syntax/tests/snapshots/parser_snapshots__parse_try_statement.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void func() {
        try {}
        catch (final Exception e) {}
        finally {}
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
TRY_KW "try"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n        "
CATCH_KW "catch"
WHITESPACE " "
L_PAREN "("
FINAL_KW "final"
WHITESPACE " "
IDENTIFIER "Exception"
WHITESPACE " "
IDENTIFIER "e"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n        "
FINALLY_KW "finally"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..110
  CLASS_DECL@0..109
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..109
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..107
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "func"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        BLOCK@29..107
          L_BRACE@29..30 "{"
          WHITESPACE@30..39 "\n        "
          TRY_STMT@39..101
            TRY_KW@39..42 "try"
            WHITESPACE@42..43 " "
            BLOCK@43..45
              L_BRACE@43..44 "{"
              R_BRACE@44..45 "}"
            WHITESPACE@45..54 "\n        "
            CATCH_CLAUSE@54..82
              CATCH_KW@54..59 "catch"
              WHITESPACE@59..60 " "
              L_PAREN@60..61 "("
              CATCH_FORMAL_PARAMETER@61..78
                MODIFIER_LIST@61..66
                  FINAL_KW@61..66 "final"
                WHITESPACE@66..67 " "
                CATCH_TYPE@67..76
                  TYPE@67..76
                    QUALIFIED_NAME@67..76
                      IDENTIFIER@67..76 "Exception"
                WHITESPACE@76..77 " "
                IDENTIFIER@77..78 "e"
              R_PAREN@78..79 ")"
              WHITESPACE@79..80 " "
              BLOCK@80..82
                L_BRACE@80..81 "{"
                R_BRACE@81..82 "}"
            WHITESPACE@82..91 "\n        "
            FINALLY_CLAUSE@91..101
              FINALLY_KW@91..98 "finally"
              WHITESPACE@98..99 " "
              BLOCK@99..101
                L_BRACE@99..100 "{"
                R_BRACE@100..101 "}"
          WHITESPACE@101..106 "\n    "
          R_BRACE@106..107 "}"
      WHITESPACE@107..108 "\n"
      R_BRACE@108..109 "}"
  WHITESPACE@109..110 "\n"
